--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,82 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="shortcut icon" href="images/dust.jpg" type="image/x-icon" />
-    <title>Wasted Summer Days</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<!--
+    -->
 
-    <!-- Custom CSS -->
-    <link href="landing.css" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    
+{% extends "base.html" %}
+{% block content %}
 
-
-
-
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet" type="text/css">
-<style type="text/css">
-
-   body { 
-    /*background-image: url('enceladus.jpg');*/
-    /*background: lightblue !important;*/
-    } /* ***!important*** Adding !important forces the browser to overwrite the default style applied by Bootstrap */
-    /*
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KlMeerCSW-c"></iframe>
-                </div>
-    */
-    .sizer {
-      width: 300px;
-    }
-
-    h2,h4{color:#777;letter-spacing:1px}
-
-    .card,.card p{box-sizing:border-box}.card p,footer{text-align:center}
-
-
-
-</style>
-
-
-
+<html>
 <body>
-
-    <!-- This is code from the previous tutorial with the following changes -->
-
-    <!-- navbar-fixed-top topnav -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" style="background-color: #2c3e50">
-
-        <!-- topnav -->
-        <div class="container-fluid topnav">
-
-            <!-- Logo -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">Wasted Summer Days</a>
-            </div>
-
-            <!-- Menu Items -->
-            <div class="collapse navbar-collapse" id="mainNavBar">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-
-        </div>
-    </nav>
-
-
     <!-- Banner header section -->
     <div class="intro-banner">
         <div class="container">
@@ -153,15 +84,20 @@
 
     <br>
     <br>
-
-    <h1 class="container-fluid" style="background-color:#33CCFF; padding-left:10px;">
+    
+    
+    <h1 class="container-fluid" style="background-color:#FFFFFF; padding-left:10px;">
         <article id="first" class="container box style1 right">
 
-                <h1 class="text-center" style="font-size: 64.1127px;"></h1>
+                <hr class="intro-divider">
+                <hr class="intro-divider">
+                <h1 class="text-center" style="font-size: 42px;">Work and Education</h1>
 
+                <hr class="intro-divider">
+                <hr class="intro-divider">
         </article>
     </h1>
-
+    
 
 
 
@@ -352,3 +288,6 @@
 
 </body>
 </html>
+
+
+{% endblock %}
