--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="shortcut icon" href="dust.jpg" type="image/x-icon" />
-    <title>Wasted Summer Days</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-    <!-- Custom CSS -->
-    <link href="landing.css" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<!--
+-->
 
-
-
+{% extends "base.html" %}
+{% block content %}
 
 
 
@@ -35,42 +23,6 @@
 }
 </style>
 
-
-
-<body>
-
-    <!-- This is code from the previous tutorial with the following changes -->
-
-    <!-- navbar-fixed-top topnav -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" style="background-color: #2c3e50">
-
-        <!-- topnav -->
-        <div class="container-fluid topnav">
-
-            <!-- Logo -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">Wasted Summer Days</a>
-            </div>
-
-            <!-- Menu Items -->
-            <div class="collapse navbar-collapse" id="mainNavBar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-
-        </div>
-    </nav>
-
-
-    <!-- Banner header section -->
     <div class="banner">
 
         <div class="container">
@@ -93,8 +45,8 @@
     </div>
 
 
-    <!-- Content row 1 -->
 
+    <link rel="shortcut icon" href="dust.jpg" type="image/x-icon" />
     <h1 class="container" style="background-color:#FF6633; padding-left:10px;">
         <article id="first" class="container box style1 right">
                 <br>
@@ -122,7 +74,6 @@
                 <div class="row">
 
                     <div class="col-lg-5 col-sm-6">
-                        <hr class="section-heading-spacer">
 
                         <!-- clearfix makes it so elements are not side by side -->
                         <div class="clearfix"></div>
@@ -154,12 +105,7 @@
     <br>
 
 
-
-</body>
-</html>
-
-
-
+{% endblock %}
 
 
 
