--- a/app/templates/priority.html
+++ b/app/templates/priority.html
@@ -30,12 +30,25 @@
        }
 
     </style>
-
+    <!--
     <script type="text/javascript">
-    $('dropdown-menu noclose').click(function(){
-    $('#selected').text($(this).text());
-  });
-    </script>
+      $(function() {
+        $('button').click( function() {
+
+          $.ajax({
+              url: '/discard',
+              data: $( "my_data" ).data(),
+              type: 'POST',
+              success: function(response) {
+                  console.log(response);
+              },
+              error: function(error) {
+                  console.log(error);
+              }
+          });
+        });
+      });
+    </script>-->
     <script type="text/javascript">
       function random_place(){
         var link=["https://www.lonelyplanet.com/iceland", 
@@ -95,7 +108,7 @@
 
     <div align"center">
 
-      <form action="/priority" method="post" align="center" >
+      <form action="/priority" method="post" align="center">
         <h1>Input Article</h1>
         <input type="text" placeholder="Article Link" name="link" value={{ request.form.link }}><br>
         <input type="text" placeholder="Article Title" name="Title" value={{ request.form.title }}><br>
@@ -109,7 +122,7 @@
           <li><input type="radio" id="ID" name="Type" value="NYTimes"><label for="ID">  NYTimes      </label></li>
           <li><input type="radio" id="ID" name="Type" value="Economist"><label for="ID">  Economist          </label></li>
           <li><input type="radio" id="ID" name="Type" value="Washington Post"><label for="ID">  Washington Post              </label></li>
-          <li><input type="radio" id="ID" name="Type" value="FiveThirtyEight"><label for="ID">   FiveThirtyEight         </label></li>
+          <li><input type="radio" id="ID" name="Type" value="BBC"><label for="ID">   BBC         </label></li>
           <li><input type="radio" id="ID" name="Type" value="Times of London"><label for="ID">  Times of London </label></li>
           <li><input type="radio" id="ID" name="Type" value="Guardian"><label for="ID">  Guardian           </label></li>
           <li><input type="radio" id="ID" name="Type" value="Other"><label for="ID">  Other              </label></li>
@@ -128,14 +141,14 @@
       <h1 class="text-center" color=#ff0000 style="font-size: 40.1127px;" align="center">Current Queue:</h1>
       <hr class="intro-divider">
           {% for item in tasks %}
-
+          <form action="/discard" method="post" style="inline">
           <div class="row" align="center">
             <div class="col-sm-6 col-md-4">
               <div class="thumbnail">
-              <img src="../static/images/economist.jpg" alt="..." style="width:50%; height:50%">
+              <img src= {{item[3]}} alt="..." style="width:50%; height:50%">
               <div class="caption">
-              <h4 class="card-title"> Source: {{ item[0] }} </h4>
-              <p class="card-text"> <small>to be done by</small> <h3> {{ item[1] }} </h3> </p>
+              <h4 class="card-title"> Title: {{ item[0] }} </h4>
+              <p class="card-text">  from: <small> <a href={{item[1]}}> {{ item[1] }} </a> </small> </p>
               <a class="container" align="center">{{ item[2] }}</a><br>
               </div>
             </div>
@@ -144,7 +157,7 @@
 
 
             <div class="col-sm-6 col-md-4">
-              <h3 style="font-size 34px" align="center"> Categorize article </h3>
+              <h3 style="font-size 32px" align="center"> Categorize article </h3>
             <div class="col-xs-6">
             <div class="checkbox">
               <ul class="list-group">
@@ -156,17 +169,21 @@
                 <li class="list-group-item"><input type="checkbox" name="ArtCat" value="News"> News</li>
               </ul>
             </div>
-
-            </div><br>
+            </div>
             <div class="col-sm-6">
-              <div class="form-group">
-                <textarea class="form-control" style="inline" id="exampleTextarea" rows="10">Thoughts on the article</textarea>
-              </div>
+                 <input type="textarea" placeholder="  Thoughts on the article" style="height:260px; width:200px" name="thoughts" value= {{request.form.thoughts}} >
             </div>
             
             </div>
-            <br><br> <br><br> <br><br> <br><br> 
-            <p><a href="#" class="btn btn-primary" role="button">Finished reading</a></p><p> <a href="#" class="btn btn-default" role="button">Discard</a></p>
+
+            <br><br> <br><br> <br><br> <br><br>
+            
+            
+                <input style="inline" type="checkbox" name="_article" value=-1> Save data
+                <input style="inline" type="checkbox" name="_article" value={{item[4]}}> Discard
+              <button type="submit" align="center"> Submit </button>
+            </form>
+
           </div>
 
           <hr class="intro-divider">
@@ -178,53 +195,7 @@
 
     </div>
 <!--    
-    <div id="map" style="width:80%;margin-left:10%;"></div>
-    <script>
-      function initMap() {
-        var uluru = {lat: 48.1351, lng: 11.5820};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = [ 
-            new google.maps.Marker({ setMap:null, label: "A", position: uluru, map: map }),
-            new google.maps.Marker({ setMap:null, label: "B", position: {lat: 50.8503, lng: 4.3517}, map: map }),
-            new google.maps.Marker({ setMap:null, label: "C", position: {lat: 51.5074, lng: 0.1278}, map: map }),
-            new google.maps.Marker({ setMap:null, label: "D", position: {lat: 48.8566, lng: 2.3522}, map: map }),
-            new google.maps.Marker({ setMap:null, label: "E", position: {lat: 55.6761, lng: 12.5683}, map: map }),
-            new google.maps.Marker({ setMap:null, label: "F", position: {lat: 52.5200, lng: 13.4050}, map: map }),
-            new google.maps.Marker({ setMap:null, label: "G", position: {lat: 47.8095, lng: 13.0550}, map: map }),
-        ];
-        var prev = marker[0];
-        
-        for ( var i = 0; i < marker.length; i ++){
-            
-            prev.setMap(null);
-            marker[i].setMap();
-            prev = marker[i];
-            
-            setTimeout(function(){
-                console.log('after');
-            },5000);
-        }
-        
-        }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnDlXJYQzkFq7QOyUSi7JgDURNC-vFisk&callback=initMap">
-    </script>
 
-   <ul class="container" align="center" style="width:80%;margin-left:10%;">
-          <h1> HI </h1>
-            <div class="card" align="center"><a>
-                <div class="col-sm-6">
-                    <h4 class="text-center"><br>Where shall we go?</h4>
-                      <p class="text-center">Anywhere is better than here</p><h4 class="text-center">2016
-                    </h4>
-                </div>
-
-            </div></a>
-    </ul>
 -->
 
 
