--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -95,11 +95,11 @@
       <h1 class="text-center" color=#ff0000 style="font-size: 40.1127px;" align="center">Previous Articles:</h1>
       <hr class="intro-divider">
           {% for item in tasks %}
-          <div class="row" align="center">
-            <div class="col-sm-6 col-md-4">
+          <div class="row" style='text-align: center;'>
+            <div class="card" style='text-align: center;'>
               <div class="thumbnail" style='text-align: center;'>
               <img src= {{item[4]}} alt="..." style="width:50%; height:50%">
-              <div class="caption">
+              <div class="caption" style='text-align: center;'>
               <h4 class="card-title"> Title: {{ item[0] }} </h4>
               <p class="card-text">  Thoughts: <br> <small> {{ item[1] }} </small> </p>
               <a class="container" align="center">{{ item[2] }}</a><br>
