--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,12 +61,22 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <ul class="nav navbar-nav">
-                      <li><a href="login.html"> Login </a></li> 
+                      {% if user %}
+                        <li><a href='#'> {{user.username}} </a></li>
+                        <li><a href='logout.html'> Logout </a></li>
+                      {% else %}
+                        <li><a href="login.html"> Login </a></li> 
+                      {% endif %}
                   </ul>
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                      <li><a href="login.html"> Login </a></li> 
+                      {% if user %}
+                        <li><a href='#'> {{user.username}} </a></li>
+                        <li><a href='logout.html'> Logout </a></li>
+                      {% else %}
+                        <li><a href="login.html"> Login </a></li> 
+                      {% endif %}
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="priority.html">Current Reads</a></li>
