fixed window minimization bug, cleaned up some orm bugs (accessing user impressions)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,8 +54,11 @@
             <!-- Menu Items -->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
+                  <!--
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
+                  -->
+                    <li><a href="feed.html">Feed</a></li>
                     <li><a href="priority.html">Current Reads</a></li>
                     <li><a href="history.html">Read History</a></li>
                 </ul>
@@ -77,8 +80,11 @@
                       {% else %}
                         <li><a href="login.html"> Login </a></li> 
                       {% endif %}
+                      <!--
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
+                      -->
+                      <li><a href="feed.html">Feed</a></li>
                       <li><a href="priority.html">Current Reads</a></li>
                       <li><a href="history.html">Read History</a></li>
                     </ul>
