--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -12,205 +12,195 @@
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
- 
+
 <!-- Include Date Range Picker -->
 <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 <html>
-  <head>
-    <style>
-      .card{
-        background-color:#D3D3D3;
-        text-align: center;
-        margin: 0;
-      }
-      #map {
-        height: 400px;
-        width: 75%;
-       }
+<head>
+  <style>
 
-        #wrapper {
-          padding-left: 250px;
-          transition: all 0.4s ease 0s;
-        }
+  .card{
+    background-color:#D3D3D3;
+    text-align: center;
+    margin: 0;
+  }
+  #map {
+    height: 400px;
+    width: 75%;
+  }
 
-        #sidebar-wrapper {
-          margin-left: -250px;
-          left: 250px;
-          width: 200px;
-          background: #CCC;
-          position: fixed;
-          height: 100%;
-          overflow-y: auto;
-          z-index: 1000;
-          transition: all 0.4s ease 0s;
-        }
+  #wrapper {
+    padding-left: 250px;
+    transition: all 0.4s ease 0s;
+  }
 
-        #page-content-wrapper {
-          background-color: #000000;
-          width: 100%;
-        }
+  #sidebar-wrapper {
+    margin-left: -250px;
+    left: 250px;
+    width: 200px;
+    background: #CCC;
+    position: fixed;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 1000;
 
-        .sidebar-nav {
-          background-color: #2c3e50;
-          position: absolute;
-          top: 0;
-          width: 250px;
-          list-style: none;
-          margin: 0;
-          padding: 0;
-        }
+  }
 
-        @media (max-width:767px) {
+  #page-content-wrapper {
+    background-color: #000000;
+    width: 100%;
+  }
+  
+  body { 
+    padding-top: -10px;
+    padding-left: 250px;
+   }
 
-            #wrapper {
-              padding-left: 0;
-            }
+  .sidebar-nav {
+    background-color: #2c3e50;
+    position: absolute;
+    top:0;
+    width: 200px;
+    height: 100%;
+    min-height:200px; /* just do simulate content */
+    z-index: 100;
+  }
 
-            #sidebar-wrapper {
-              left: 0;
-            }
+  @media (max-width:767px) {
 
-            #wrapper.active {
-              position: relative;
-              left: 250px;
-            }
+    body { padding-left: 0px; }
 
-            #wrapper.active #sidebar-wrapper {
-              left: 250px;
-              width: 250px;
-              transition: all 0.4s ease 0s;
-            }
-
-        }
-
-    </style>
-    
-    <script>
-    function sub( id ) {
-        console.log('sub function');
-        $(id).submit();
+    #wrapper {
+      padding-left: 0;
     }
-    </script>
-    <script type="text/javascript">
-      function random_place(){
-        var link=["https://www.nytimes.com", 
-                  "https://www.economist.com",
-                  "https://www.thetimes.com",
-                  "https://www.washingtonpost.com"]
 
-        var myrandom=Math.round(Math.random()*link.length)
-        window.location = link[myrandom]        
+    #sidebar-wrapper {
+      left: 0;
+    }
+
+    #wrapper.active {
+      position: relative;
+      left: 250px;
+    }
+
+    #wrapper.active #sidebar-wrapper {
+      left: 250px;
+      width: 250px;
+      transition: all 0.4s ease 0s;
+    }
+
+  }
+
+  </style>
+
+  <script>
+  function sub( id ) {
+    console.log('sub function');
+    $(id).submit();
+  }
+  </script>
+  <script type="text/javascript">
+  function random_place(){
+    var link=["https://www.nytimes.com", 
+    "https://www.economist.com",
+    "https://www.thetimes.com",
+    "https://www.washingtonpost.com"]
+
+    var myrandom=Math.round(Math.random()*link.length)
+    window.location = link[myrandom]        
+  }
+
+  </script>
+
+  <script type="text/javascript">
+  $(function() {
+    $('input[name="daterange"]').daterangepicker({
+      timePicker: true,
+      timePickerIncrement: 30,
+      locale: {
+        format: 'MM/DD/YYYY h:mm A'
       }
+    });
+  });
+  </script>
+</head>
+<body>
 
-    </script>
-
-    <script type="text/javascript">
-        $(function() {
-          $('input[name="daterange"]').daterangepicker({
-              timePicker: true,
-              timePickerIncrement: 30,
-              locale: {
-              format: 'MM/DD/YYYY h:mm A'
-              }
-          });
-        });
-        </script>
-  </head>
-  <body>
-
-<div id="wrapper">
+  <div id="wrapper">
+    <div="center">
     <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <br><br><br>
-            <li class="sidebar-brand"><h2 style='color:#FFF;'> Your Library </h2></li>
-            <li><a href="#">Next link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>            
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>            
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>            
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-            <li><a href="#">Last link</a></li>
-
+      <ul class="sidebar-nav">
+        <br><br><br>
+        <li class="sidebar-brand"><h2 style='color:#FFF;'> <a href="{{  url_for('history')}}" style="color: #FFFFFF"> Your Library </a></h2></li>
+          <li><a href="{{  url_for('history', cat='Centerist')  }}">Centerist</a></li>
+          <li><a href="{{url_for('history', cat='Left')}}">Left</a></li>
+          <li><a href="{{url_for('history', cat='Right')}}">Right</a></li>
+          <li><a href="{{url_for('history', cat='Sports')}}">Sports</a></li>
+          <li><a href="{{url_for('history', cat='Economy')}}">Economy</a></li>
+          <li><a href="{{url_for('history', cat='Global')}}">Global Politics</a></li>
+          <li><h3 style='color:#FFF;'><a href='#'>Bookmarks</a></h3></li>
         </ul>
     </div>
+  </div>
 
-    <div align"center">
-    <!-- Banner header section -->
-    <div class="row">
-      <div class="col-lg-12">
-          <div class="container">
+    <!--<div align"center">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="container">-->
             <div class="intro-banner">
-                    <br>
-                    <br>
-                    <br>
-                    <div class="intro-inner">
+              <br>
+              <br>
+              <br>
+              <div class="intro-inner">
+                <h1 class="header" align='center' style="font-size: 64.1127px;">ReaderQ History</h1>
+                <h2 id="subtitle" class="text-center" align='center' style="font-size: 21.4167px;">Catch up with your reading</h2>
 
-                        <h1 class="text-center" align='center' style="font-size: 64.1127px;"><a href="javascript:random_place();"><br>ReaderQ</a></h1>
-                        <h2 id="subtitle" class="text-center" align='center' style="font-size: 21.4167px;">Catch up with your reading</h2>
+                <hr class="intro-divider">
 
-                        <hr class="intro-divider">
-
-                        </ul>
-                    </div>
-                </div>
-
+              </ul>
             </div>
+          <!--</div>
         </div>
-    </div>
-      {% if tasks %}
-      <div align="center">
+      </div>
+    </div>-->
+
+    {% if tasks %}
+    <div align="center">
       <hr class="intro-divider">
       <h1 class="text-center" color=#ff0000 style="font-size: 40.1127px;" align="center">Previous Articles:</h1>
-      <hr class="intro-divider">
-          {% for item in tasks %}
-          <div class="row" style='text-align: center;'>
-            
-              <div class="card card-block" style='text-align: center;'>
-                <div class="thumbnail" style='text-align: center;'>
-                <img src= {{item[4]}} alt="..." style="width:50%; height:50%">
-                <div class="caption" style='text-align: center;'>
-                <h4 class="card-title"> Title: {{ item[0] }} </h4>
-                <p class="card-text">  Thoughts: <br> <small> {{ item[1] }} </small> </p>
-                <a class="container" align="center">{{ item[2] }}</a><br>
-                <h3 class="text-center" style="font-size: 20px;" > From: {{ item[3] }}</a><br>
-                </div>
-              </div>
-
-          </div>
-
-          </div>
-          {% endfor %}
-        <hr class="intro-divider">
-      {% else %}
-       <h1 class="text-center" style="font-size: 64.1127px;"><a href="javascript:random_place();"><br>You haven't read anything, Get reading!</a></h1>
+      {% if cat %}
+        <h3> Current section: {{ cat }} </h3>
       {% endif %}
+      <hr class="intro-divider">
+      {% for item in tasks %}
+      <div class="row" style='text-align: center;'>
+        <div class="card card-block" style='text-align: center;'>
+          <div class="thumbnail" style='text-align: center;'>
+            <img src= {{item[4]}} alt="..." style="width:50%; height:50%">
+            <div class="caption" style='text-align: center;'>
+              <h4 class="card-title"> Title: {{ item[0] }} </h4>
+              <p class="card-text">  Thoughts: <br> <small> {{ item[1] }} </small> </p>
+              <a class="container" align="center">{{ item[2] }}</a><br>
+              <h3 class="text-center" style="font-size: 20px;" > From: {{ item[3] }}</a><br>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+        {% endfor %}
+        <hr class="intro-divider">
+        {% else %}
+        <h1 class="header" align= "center" style="font-size: 64.1127px;"><a href="javascript:random_place();"><br>You haven't read anything, Get reading!</a></h1>
+        {% endif %}
 
       </div> 
 
       {% block results %} {% endblock %}
 
     </div>
-</div>
+  </div>
 <!--    
 
 -->
