--- a/app/templates/priority.html
+++ b/app/templates/priority.html
@@ -16,18 +16,15 @@
 <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 
-
-
-
-<html>
-<head>
-
       <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
 
+
+<html>
+<head>
 
   <style>
   .card{
@@ -51,11 +48,30 @@
   .bs-docs-header{
     background-image:'/static/images/sister_lake_trees.jpg';
   }
-  #wrapper {
-  padding-left: 250px;
-  transition: all 0.4s ease 0s;
-}
+  @media (max-width:767px) {
 
+    body { padding-left: 0px; }
+
+    #wrapper {
+      padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+      left: 0;
+    }
+
+    #wrapper.active {
+      position: relative;
+      left: 250px;
+    }
+
+    #wrapper.active #sidebar-wrapper {
+      left: 250px;
+      width: 250px;
+      transition: all 0.4s ease 0s;
+    }
+
+  }
   </style>
 
   <script>
@@ -92,15 +108,12 @@
     });
   });
 
-  function deleteArticle(event) {
-    event.preventDefault();
-    var el = $(event.target);
-    var id = el.closest("form").attr("article-id");
-
+  function deleteArticle( _id ) {
+    console.log( _id );
     $.ajax({
       type: "DELETE",
       url: "/destroy_article",
-      data: JSON.stringify({ articleId: id }),
+      data: JSON.stringify({ articleId: _id }),
       contentType: "application/json",
       dataType: "json"
     }).fail(function (data) {
@@ -112,17 +125,20 @@
     window.location.href='/priority'
   };
 
-  function save(event) {
+  function save(event, _id) {
     event.preventDefault();
-    var el = $(event.target);
-    var id = el.closest("form").attr("article-id");
-    var text = $( 'textarea#' + id  ).val();
-    var cbox = [$("input[type='checkbox'][id=ArtCatL").is(':checked'),$("input[type='checkbox'][id=ArtCatR").is(':checked'), $("input[type='checkbox'][id=ArtCatC").is(':checked'), $("input[type='checkbox'][id=ArtCatE").is(':checked'), $("input[type='checkbox'][id=ArtCatS").is(':checked'), $("input[type='checkbox'][id=ArtCatN").is(':checked')];
-    console.log( text )
+
+    var val = [];
+    $(':checkbox:checked').each(function(i){
+      val[i] = $(this).val();
+    });
+    console.log( val );
+    var text = $('textarea#'+_id).val();
+    
     $.ajax({
       type: "POST",
       url: "/updatequeue",
-      data: JSON.stringify({ articleId: id, impression: text, checkbox:cbox}),
+      data: JSON.stringify({ articleId: _id, impression: text, checkbox:val}),
       contentType: "application/json",
       dataType: "json"
     }).fail(function (data) {
@@ -131,6 +147,7 @@
       console.log('done ! yay! ')
       console.log(data);
     })
+    
     window.location.href='/priority'
   };
   </script>
@@ -140,11 +157,8 @@
   <!-- Banner header section -->
   <div class="intro-banner">
     <div class="row">
-
-
       <div class="col-lg-12">
         <div class="container">
-          <br>
           <br>
           <br>
           <div class="intro-inner">
@@ -192,7 +206,7 @@
 
 
       <div align="center">
-        <hr class="intro-divider">
+        <hr class="intro-divider" >
         <h1 class="text-center" color=#ff0000 style="font-size: 40.1127px;" align="center">Current Queue:</h1>
         <hr class="intro-divider">
         {% for item in tasks %}
@@ -210,10 +224,11 @@
             </div>
             <div class="col-md-6">
               <h3 style="font-size 32px" align="center"> Categorize article </h3>
+              <div class="row">
               <div class="col-xs-6">
                 <div class="checkbox">
                   <ul class="list-group" checkbox-id="category">
-                    <li class="list-group-item"><input type="checkbox" id="ArtCatL" value="Left"> Left</li>
+                    <li class="list-group-item"><label><input type="checkbox" id="ArtCatL" value="Left"> Left</label></li>
                     <li class="list-group-item"><input type="checkbox" name="ArtCatR" value="Right"> Right</li>
                     <li class="list-group-item"><input type="checkbox" name="ArtCatC" value="Center"> Centrist</li>
                     <li class="list-group-item"><input type="checkbox" name="ArtCatE" value="Economy"> Economy</li>
@@ -222,22 +237,17 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div>
                   <textarea placeholder="Thoughts on the article" id= {{item[4]}} cols="23" rows="15" > </textarea>
-                </div>
               </div>
-
             </div>
           </div>
-
         </form>
         
         <div class='row'>
           <div class='col-sm-6 col-md-4'>
             <div class="container" align="center">
-              <button id="save-btn" onclick="save(event)">Save and remove from queue</button>
-              <button id="delete-btn" onclick="deleteArticle(event)">Delete without saving</button>
+              <button id="save-btn" onclick="save(event, {{item[4]}})">Save and remove from queue</button>
+              <button id="delete-btn" onclick="deleteArticle({{item[4]}})">Delete without saving</button>
             </div>
           </div>
         </div>
