cleaning up old changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">Wasted Summer Days</a>
+                <a class="navbar-brand">Wasted Summer Days</a>
             </div>
 
             <!-- Menu Items -->
